# gsnake

./: .gitignore  CMakeLists.txt  template.html
docs/: fullscreen.js  gsnake.js  gsnake.wasm  index.html  leaderboard.js  styles.css
src/: Makefile  app  main.c  screen_gameplay.c  screen_mainmenu.c
src/include/: controls.h  definitions.h  gui_Gsnake game over screen.h  screen_gameplay.h  screen_mainmenu.h
web_build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  gsnake.html  gsnake.js  gsnake.wasm
